@@ -76,10 +76,8 @@ set ARCO_TABLES { sge_job_usage sge_job_log sge_job_request sge_job
                   sge_group_values sge_group
                   sge_share_log 
                   sge_version
-}
-if {$ts_config(gridengine_version) >= 61} {
-  lappend ARCO_TABLES sge_statistic_values
-  lappend ARCO_TABLES sge_statistic
+                  sge_statistic_values
+                  sge_statistic
 }
 if {$ts_config(gridengine_version) >= 62} {
   lappend ARCO_TABLES sge_ar_attribute
@@ -92,10 +90,7 @@ if {$ts_config(gridengine_version) >= 62} {
 set ARCO_VIEWS { view_job_times view_jobs_completed
                  view_job_log view_department_values view_group_values view_host_values
                  view_project_values view_queue_values view_user_values view_accounting
-}
-
-if {$ts_config(gridengine_version) >= 61} {
-  lappend ARCO_VIEWS view_statistic
+                 view_statistic
 }
 
 if {$ts_config(gridengine_version) >= 62} {
